--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ docs/_build/
 target/
 
 # Pycharm
+*.idea
 
 
 # Jupyter Notebook
@@ -107,6 +108,10 @@ venv.bak/
 # Spyder project settings
 .spyderproject
 .spyproject
+
+# sublime
+*.sublime-workspace
+*.sublime-project
 
 # Rope project settings
 .ropeproject
